# eweek_ball_model_2026

./: .gitmodules
arduino_firmware/eweek_ball_model_2026/: eweek_ball_model_2026.ino
platformio/eweek_2026/: platformio.ini
platformio/eweek_2026/include/: comm_protocol.h  comms.h  drive.h  main.h  main_datatypes.h  main_definitions.h  pinout.h  pinout_arduino.h  pinout_esp.h  sonar.h  spigot.h  state_machine.h
platformio/eweek_2026/src/: eweek_arduino.code-workspace  main.cpp
platformio/eweek_arduino/: platformio.ini
platformio/eweek_arduino/include/: main.h
platformio/eweek_arduino/src/: main.cpp
ros/src/eweek/: CMakeLists.txt  package.xml
ros/src/eweek/include/: app.h
ros/src/eweek/launch/: system.launch.py
ros/src/eweek/src/: app.cpp
ros/src/rover_sounds/: CMakeLists.txt
ros/src/rover_sounds/include/: speaker_node.h
